--- a/GladOS.Core/GladOS.Droid/GladOS.Droid.csproj
+++ b/GladOS.Core/GladOS.Droid/GladOS.Droid.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="SplashScreen.cs" />
+    <Compile Include="Views\OfficeView.cs" />
     <Compile Include="Views\MeetingView.cs" />
     <Compile Include="Views\FirstView.cs" />
     <Compile Include="Views\SecondView.cs" />
@@ -128,6 +129,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\MeetingView.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\OfficeView.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
