--- a/GladOS.Core/GladOS.Droid/GladOS.Droid.csproj
+++ b/GladOS.Core/GladOS.Droid/GladOS.Droid.csproj
@@ -108,6 +108,7 @@
     <Compile Include="LinkerPleaseInclude.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DialogService.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Views\OfficeView.cs" />
@@ -185,9 +186,7 @@
     <AndroidResource Include="Resources\drawable\sample_6.jpg" />
     <AndroidResource Include="Resources\drawable\sample_7.jpg" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
