--- a/GladOS.Core/GladOS.Core/GladOS.Core.csproj
+++ b/GladOS.Core/GladOS.Core/GladOS.Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\IPersonProperties.cs" />
     <Compile Include="Models\PersonProperties.cs" />
+    <Compile Include="ViewModels\ProfileViewModel.cs" />
     <Compile Include="ViewModels\OfficeViewModel.cs" />
     <Compile Include="ViewModels\MeetingViewModel.cs" />
     <Compile Include="ViewModels\ScheduleViewModel.cs" />
