--- a/GladOS.Core/GladOS.Core/GladOS.Core.csproj
+++ b/GladOS.Core/GladOS.Core/GladOS.Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Interfaces\ISqlite.cs" />
     <Compile Include="Models\GeoLocation.cs" />
     <Compile Include="Models\Event.cs" />
+    <Compile Include="Models\GlobalLocalPerson.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\EventProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -56,7 +57,7 @@
     <Compile Include="Models\PersonProperties.cs" />
     <Compile Include="ViewModels\ProfileViewModel.cs" />
     <Compile Include="ViewModels\OfficeViewModel.cs" />
-    <Compile Include="ViewModels\MeetingViewModel.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\ScheduleViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\SelectedIndividualViewModel.cs" />
