--- a/GladOS.Core/GladOS.Droid/GladOS.Droid.csproj
+++ b/GladOS.Core/GladOS.Droid/GladOS.Droid.csproj
@@ -169,7 +169,7 @@
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Views\ProfileView.cs" />
     <Compile Include="Views\OfficeView.cs" />
-    <Compile Include="Views\MeetingView.cs" />
+    <Compile Include="Views\LoginView.cs" />
     <Compile Include="Views\ScheduleView.cs" />
     <Compile Include="Views\HomeView.cs" />
     <Compile Include="Views\SelectedIndividualView.cs" />
@@ -195,7 +195,7 @@
     <AndroidResource Include="Resources\layout\SelectedIndividualView.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\layout\MeetingView.axml">
+    <AndroidResource Include="Resources\layout\LoginView.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\OfficeView.axml">
