--- a/GladOS.Core/GladOS.Core/GladOS.Core.csproj
+++ b/GladOS.Core/GladOS.Core/GladOS.Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Interfaces\ISqlite.cs" />
     <Compile Include="Models\GeoLocation.cs" />
     <Compile Include="Models\Event.cs" />
+    <Compile Include="Models\GlobalSelectedPerson.cs" />
     <Compile Include="Models\GlobalLocalPerson.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\EventProperties.cs" />
